# ai-tools-trends-ranker

./: README.md  pyproject.toml
notebooks/: lab.ipynb
notebooks/trend_analysis_results/: ai_tools_trend_analysis_20241030_232102.xlsx
src/google_trends_analyzer/: __init__.py  trends_analyzer.py
