[project]
name = "google-trends-analyzer"
version = "0.1.0"
description = "Google Trends analysis tool"
requires-python = ">=3.8"

dependencies = [
    "pytrends>=4.9.0",
    "pandas>=2.0.0",
    "plotly>=5.13.0",
    "nbformat>=4.2.0",
    "xlsxwriter"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]